--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@upstash/redis": "^1.31.3",
     "class-variance-authority": "^0.7.0",
