--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
