--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.390.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
